2010-01-13  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/Makefile.am:
	Add missing test file

2010-01-13  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/test_resource.py:
	"class C():" is a syntax error with python 2.4, removing
	parenthesis.

2010-01-13  Marc-André Lureau  <mlureau@flumotion.com>

	* configure.ac:
	* m4 (deleted):
	AC_CONFIG_MACRO_DIR() takes only one path, and removing m4, it is
	empty.

2010-01-13  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion-fragmented-streaming.spec.in:
	Fix gstreamer dependency name

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion-fragmented-streaming.spec.in:
	Update versions automatically

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* intltool-extract.in (deleted):
	* intltool-update.in (deleted):
	* intltool-merge.in (deleted):
	* po (deleted):
	* po/LINGUAS (deleted):
	* po/es.po (deleted):
	* po/Makevars (deleted):
	* po/POTFILES.in (deleted):
	Remove i18n support

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion-fragmented-streaming.spec.in:
	Added missing build dependency

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	* configure.ac:
	* env:
	* env (svn:executable):
	* env (added):
	* env.in (deleted):
	Do not autogenerate 'env' and add genreated files to DISTCLEANFILES
	* flumotion/test/common.py (deleted):
	* flumotion/test/Makefile.am:
	delete autogenerated files

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	* configure.ac:
	* flumotion-fragmented-streaming.spec.in:
	* po/es.po:
	* +    flumotion-fragmented-streaming.spec.in (added):
	* flumotion-fragmentedstreaming.spec.in (deleted):
	Fix project name

2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_mpegts.py:
	* flumotion/test/test_ts_segmenter.py: