@@ -1,5 +1,10 @@
 2010-01-13  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Make sessions support compatible with twisted 2.*
+
+2010-01-13  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/test/Makefile.am:
 	Add missing test file
 
